src/app/scroll/scroll.component.css
.bottom{
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    /* height: 20%; */
}

.top{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    /* height: 20%; */
}

/* .left{
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 20%;
}

.right{
    position: fixed;
    top: 0;
    right: 0;
    height: 100%;
    width: 20%;
} */

.scroll-area{
    border: dotted 1px rgb(213, 211, 211);
    pointer-events: none;
}

.target-area{
    position: fixed;
    bottom: 20%;
    top: 20%;
    width: 100%;
    height: 60%; 
    z-index: -1;
}

.check{
    color: var(--green);
    padding-right: 10px;
}

.small{
    height: 10%;
}

.medium{
    height: 20%;
}

.large{
    height: 30%;
}

